Optimize footer layout for screens with width up to 540 pixels: 1. Implemented a media query targeting screens with a width less than or equal to 540 pixels in the 'footer' component.    - Adjusted the '.f-container' flex layout to 'wrap' for improved responsiveness.    - Added padding to enhance spacing within the container. 2. Within each '.footer-box':    - Set the width to 40% to accommodate smaller screens more effectively.    - Added margin to 'h3' and 'p' elements for better spacing.    - Aligned '.footer-us' to the top and adjusted white-space to 'nowrap' to prevent line breaks on smaller screens. These changes ensure a more user-friendly and visually appealing footer on devices with narrower screens.

--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -24,6 +24,7 @@
         line-height: 20px;
         margin: 10px 0 20px 0;
         color: #b6bdc4;
+        white-space: nowrap;
       }
       .footer-us {
         margin-top: 90px;
@@ -37,6 +38,30 @@
         span {
           display: flex;
           align-items: center;
+        }
+      }
+    }
+  }
+}
+@media screen and (width<= 540px) {
+  .footer {
+    .f-container {
+      flex-wrap: wrap;
+
+      padding: 20px;
+
+      .footer-box {
+        text-align: left;
+        width: 40%;
+        h3 {
+          margin-bottom: 10px;
+        }
+        p {
+          margin-bottom: 10px;
+        }
+        .footer-us {
+          margin-top: 20px;
+          white-space: nowrap;
         }
       }
     }
